--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -870,6 +870,15 @@ form.booking-period {
     color: grey;
     font-weight: 300;
   }
+
+  &.active {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  &.active:focus {
+    outline: 0;
+  }
 }
 
 #form-age {
