III-3272 - search organisers via advanced query + add help link

--- a/src/management/components/query-search-bar.html
+++ b/src/management/components/query-search-bar.html
@@ -7,5 +7,6 @@
            ng-model="qsb.queryString"
            autocomplete="off"
            ng-change="qsb.find()">
+    <a ng-if="qsb.helpLink" ng-href="{{::qsb.helpLink}}" target="_blank" class="advanced-search" ng-bind="::qsb.helpLabel"></a>
   </div>
 </form>
