--- a/src/management/components/query-search-bar.html
+++ b/src/management/components/query-search-bar.html
@@ -1,4 +1,4 @@
-<form class="form-inline" role="search">
+<form class="form-inline query-search-bar" role="search">
   <div class="form-group">
     <label for="user-search-input" ng-bind="::qsb.searchLabel"></label>
     <input type="text"
