--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -29,6 +29,7 @@
 
 //Management module
 @import "query-search-result.less";
+@import "query-search-bar.less";
 @import "management-form.less";
 @import "moderation.less";
 @import "organization-search-item.less";
