--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -54,6 +54,10 @@ h2.block-header {
   content: "";
 }
 
+.event-detail .list-unstyled {
+  word-break: break-word;
+}
+
 .event-detail-description {
   color: black;
   white-space: pre-line;
