III-3345 confirmed-tag implemented

--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -26,6 +26,10 @@ textarea.resize-vertical {
   min-width: 120px;
 }
 
+.dashboard-item .btn-confirmed2020 {
+  margin-right: 2rem;
+}
+
 .title {
   margin: 0;
   line-height: 56px;
