III-3345 resolved commented improvements

--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -26,7 +26,7 @@ textarea.resize-vertical {
   min-width: 120px;
 }
 
-.dashboard-item .btn-confirmed2020 {
+.dashboard-item .btn-confirmed {
   margin-right: 2rem;
 }
 
