--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -19,6 +19,7 @@
   <span ng-if="::!offerCtrl.offerExpired">
     <div class="pull-right btn-group" uib-dropdown>
       <a class="btn btn-default btn-confirmed" ng-if="offerCtrl.showButtonConfirmed()" ng-click="offerCtrl.confirmEvent()" translate-once="dashboard.directive.confirm_event"></a>
+      <div class="tag-confirmed" ng-if="offerCtrl.showConfirmedTag()">✅ gaat door</div>
       <a class="btn btn-default" ng-href="{{ event.url + '/edit' }}" translate-once="dashboard.directive.edit"></a>
       <button type="button" class="btn btn-default" uib-dropdown-toggle><span class="caret"></span></button>
       <ul uib-dropdown-menu role="menu">
