--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -30,6 +30,15 @@ textarea.resize-vertical {
   margin-right: 2rem;
 }
 
+.dashboard-item .tag-confirmed {
+  position: relative;
+  float: left;
+  border: none;
+  margin-right: 2rem;
+  height: 3.5rem;
+  line-height: 3.5rem;
+}
+
 .title {
   margin: 0;
   line-height: 56px;
