--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -37,6 +37,16 @@ textarea.resize-vertical {
   margin-right: 2rem;
   height: 3.5rem;
   line-height: 3.5rem;
+  font-style: italic;
+  
+  &:before {
+    content: "\f058 ";
+    font-family: FontAwesome;
+    color: #5cb85c;
+    margin-right: 6px;
+    font-style: normal;
+    font-size: 17px;
+  }
 }
 
 .title {
