--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -30,9 +30,14 @@ textarea.resize-vertical {
   margin-right: 2rem;
 }
 
+.dashboard-item .btn-group {
+  display: flex;
+}
+
 .dashboard-item .tag-confirmed {
+  display: inline-block;
+  white-space: nowrap;
   position: relative;
-  float: left;
   border: none;
   margin-right: 2rem;
   height: 3.5rem;
