III-3345 styling improvements

--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -20,7 +20,7 @@
     <div class="pull-right btn-group" uib-dropdown>
       <a class="btn btn-default btn-confirmed" ng-if="offerCtrl.showButtonConfirmed()" ng-click="offerCtrl.confirmEvent()" translate-once="dashboard.directive.confirm_event"></a>
       <div class="tag-confirmed" ng-if="offerCtrl.showConfirmedTag()">
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
         <span>Gaat door</span>
       </div>
       <a class="btn btn-default" ng-href="{{ event.url + '/edit' }}" translate-once="dashboard.directive.edit"></a>
