--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -38,11 +38,15 @@ textarea.resize-vertical {
   display: inline-block;
   white-space: nowrap;
   position: relative;
-  border: none;
   margin-right: 2rem;
   height: 3.5rem;
   line-height: 3.5rem;
   font-style: italic;
+
+  .fa-check-circle {
+    color: #5cb85c;
+    margin-right: 6px;
+  }
 }
 
 .title {
