add max-width to class

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -389,6 +389,10 @@
     color: @udb-gray-dark;
   }
 
+  textarea.event-description {
+    max-width: 100%;
+  }
+
   .tip {
     color: #626262;
     margin-bottom: 10px;
