add styling to not show margin on p-tags in the alert-info

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -865,6 +865,12 @@ form.booking-period {
   .description-info {
     font-size: small;
   }
+
+  .description-tips {
+    p {
+      margin: 0;
+    }
+  }
 }
 
 .form-age-range-button {
