add 'Doorgaan' text

--- a/src/migration/event-migration-footer.component.html
+++ b/src/migration/event-migration-footer.component.html
@@ -3,5 +3,5 @@
        ng-click="migration.completeMigration()"
        role="button"
        ng-class="{disabled: !migration.migrationReady()}"
-       ng-bind="::migration.destination.description"></a>
+       ng-bind="::migration.destination.description">Doorgaan</a>
 </div>
