--- a/src/migration/event-migration-footer.component.html
+++ b/src/migration/event-migration-footer.component.html
@@ -3,6 +3,5 @@
        ng-click="migration.completeMigration()"
        role="button"
        ng-class="{disabled: !migration.migrationReady()}"
-       ng-bind="::migration.destination.description"
-       translate-once="eventForm.step4.continue"></a>
+       ng-bind="::migration.destination.description"></a>
 </div>
