Add missing translation

--- a/src/organizers/components/organizer-address/organizer-address.html
+++ b/src/organizers/components/organizer-address/organizer-address.html
@@ -1,7 +1,7 @@
 <form name="oac.organizerAddressForm" class="organizer-address-form">
     <div class="row">
       <div class="col-xs-6">
-        <label>Adres</label>
+        <label translate-once="organizer.manage.address"></label>
       </div>
       <div class="col-xs-6">
         <select ng-change="oac.changeCountrySelection()"
