--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -63,7 +63,7 @@
           <a type="button" class="btn btn-default" ng-click="qe.stopEditing()">
             Annuleren
           </a>
-          <button type="button" class="btn btn-primary" ng-click="qe.updateQueryString()">
+          <button type="button" class="btn btn-primary" ng-click="qe.updateQueryString()" translate-once="search.search">
             Zoeken
           </button>
         </div>
