--- a/src/search/components/search-bar.directive.html
+++ b/src/search/components/search-bar.directive.html
@@ -1,4 +1,4 @@
-<h1 class="title">Zoeken</h1>
+<h1 class="title" translate-once="search.search">Zoeken</h1>
 <form class="navbar-form navbar-left udb-header-search" role="search"
       ng-class="{'has-errors': sb.hasErrors, 'is-editing': sb.isEditing}">
   <div class="form-group has-warning has-feedback">
