--- a/src/search/components/search-bar.directive.html
+++ b/src/search/components/search-bar.directive.html
@@ -26,6 +26,6 @@
 
 <ul class="nav navbar-nav">
   <li>
-    <a href="#" ng-click="sb.editQuery()" class="advanced-search" ng-class="{'is-editing': sb.isEditing}">Geavanceerd</a>
+    <a href="#" ng-click="sb.editQuery()" class="advanced-search" ng-class="{'is-editing': sb.isEditing}" translate-once="search.advanced">Geavanceerd</a>
   </li>
 </ul>
