--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h2 class="modal-title">Geavanceerde zoekopdracht bouwer</h2>
+  <h2 class="modal-title" translate-once="search.advancedSearchBuilder.title">Geavanceerde zoekopdracht bouwer</h2>
 </div>
 
 <div class="modal-body">
