Translate Hier kan je complexe zoekopdrachten bouwen. Hulp nodig? Lees onze handleiding.

--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -1,11 +1,17 @@
 <div class="modal-header">
-  <h2 class="modal-title" translate-once="search.advancedSearchBuilder.title">Geavanceerde zoekopdracht bouwer</h2>
+  <h2 class="modal-title" translate-once="search.advancedQueryBuilder.title">Geavanceerde zoekopdracht bouwer</h2>
 </div>
 
 <div class="modal-body">
 
   <div class="udb-query-editor-header">
-    <!-- udb-query-editor-header -->
+    <p><span translate-once="search.advancedQueryBuilder.header.info"></span>
+      <a 
+        href='https://helpdesk.publiq.be/hc/nl/articles/360008632440-Hoe-kan-ik-activiteiten-zoeken-op-basis-van-verschillende-parameters' 
+        target='_blank'>
+        <span translate-once="search.advancedQueryBuilder.header.link"></span>
+      </a>.
+    </p>
   </div>
 
   <div class="udb-query-editor">
