--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -20,7 +20,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-sm-3">
-            <h3 class="panel-title">Groep <span ng-bind="$index + 1"></span></h3>
+            <h3 class="panel-title"><span translate-once="search.advancedQueryBuilder.group">Groep </span><span ng-bind="$index + 1"></span></h3>
           </div>
           <div class="col-sm-7">
             <div class="btn-group control-in-uitsluiten" role="group" aria-label="...">
