Fix forgotten text

--- a/src/search/components/query-editor.directive.html
+++ b/src/search/components/query-editor.directive.html
@@ -10,11 +10,11 @@
           <div class="btn-group control-in-uitsluiten" role="group" aria-label="...">
             <button type="button" class="btn btn-default btn-sm" ng-click="qe.toggleExcludeGroup(rootGroup)">
               <span ng-hide="rootGroup.excluded" class="fa fa-check-circle"></span>
-              <span translate-once="search.advancedQueryBuilder.include">Insluiten</span>
+              <span translate-once="search.advancedQueryBuilder.include"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm" ng-click="qe.toggleExcludeGroup(rootGroup)">
               <span ng-show="rootGroup.excluded" class="fa fa-check-circle"></span>
-              <span translate-once="search.advancedQueryBuilder.exclude">Uitsluiten</span>
+              <span translate-once="search.advancedQueryBuilder.exclude"></span>
             </button>
           </div>
         </div>
