Remove classname that is only used by the tag manager to overwrite this

--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -4,7 +4,7 @@
 
 <div class="modal-body">
 
-  <div class="udb-query-editor-header">
+  <div>
     <p><span translate-once="search.advancedQueryBuilder.header.info"></span>
       <a 
         href='https://helpdesk.publiq.be/hc/nl/articles/360008632440-Hoe-kan-ik-activiteiten-zoeken-op-basis-van-verschillende-parameters' 
