--- a/src/styles/editable-click.less
+++ b/src/styles/editable-click.less
@@ -4,7 +4,7 @@
   position: relative;
   &:before {
     .fa-icon();
-    content: @fa-var-pencil;
+    content: @fa-var-pencil-alt;
     display: inline-block;
     position: absolute;
     right: 5px;
