--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -1,7 +1,7 @@
 // Scaffold
 @import "udb-variables.less";
 @import "utility.less";
-@import "font-awesome.less";
+@import "fontawesome.less";
 
 // General components
 @import "main.less";
