Change icons that changed group or name

--- a/src/event_form/components/suggestions/event-preview.directive.html
+++ b/src/event_form/components/suggestions/event-preview.directive.html
@@ -32,7 +32,7 @@
       <tr>
         <td>
           <strong class="hidden-xs hidden-sm">Organisatie</strong>
-          <i class="fa fa-building-o hidden-md hidden-lg"></i>
+          <i class="far fa-building hidden-md hidden-lg"></i>
         </td>
         <td ng-bind="::event.organizer.name"></td>
       </tr>
