Change Icons added by :before pseudo-elements

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -73,12 +73,13 @@
   }
 
   .btn-chosen:before {
-    content: "\f058 ";
-    font-family: "FontAwesome";
+    content: "\f058";
+    font-family: "Font Awesome 5 Free";
     color: @brand-success;
     margin-right: 6px;
     font-style: normal;
-    font-size: 17px;
+    font-size: 15px;
+    font-weight: 900;
   }
 
   .number {
@@ -206,7 +207,7 @@
   }
 
   .datepicker_icon:after {
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 Free";
     color: @udb-gray-dark;
     content: "\f073";
     position: absolute;
@@ -263,13 +264,13 @@
   .state-complete .extra-task-label:before {
     content: "\f058";
     color: @brand-success;
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 Free";
     transition: opacity 0.5s ease;
     -webkit-font-smoothing: subpixel-antialiased;
     -moz-osx-font-smoothing: auto;
     font-style: normal;
     line-height: 30px;
-    font-size: 17px;
+    font-size: 15px;
     margin-right: 6px;
   }
 
@@ -377,7 +378,7 @@
   .image-upload-icon:before {
     color: @udb-gray-dark;
     text-align: center;
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 Free";
     content: "\f03e";
     font-size: 50px;
   }
@@ -462,14 +463,14 @@
     position: absolute;
     left: 0;
     color: @brand-success;
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 Free";
     opacity: 0;
     transition: opacity 0.5s ease;
     -webkit-font-smoothing: subpixel-antialiased;
     -moz-osx-font-smoothing: auto;
     font-style: normal;
     line-height: 30px;
-    font-size: 17px;
+    font-size: 15px;
   }
 
   .recently-added td {
@@ -700,7 +701,8 @@
 
 .btn-plus:before {
   content: "\f055";
-  font-family: "FontAwesome";
+  font-family: "Font Awesome 5 Free";
+  font-size: 15px;
   color: @udb-gray;
   margin-right: 0.5em;
   text-decoration: none;
