--- a/src/styles/result-viewer.less
+++ b/src/styles/result-viewer.less
@@ -63,12 +63,13 @@
   width: 18px;
   display: inline-block;
   text-align: center;
-  content: "\f096";
-  font-family: "FontAwesome";
+  content: "\f0c8";
+  font-family: "Font Awesome 5 Free";
 }
 
 .rv-control-toggle.active:before {
   content: "\f14a";
+  font-weight: 900;
 }
 
 .rv-first-column {
