--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -52,23 +52,25 @@
   background-color: lighten(@brand-success, 30%);
 
   &:after {
-  font-family: "FontAwesome";
+  font-family: "Font Awesome 5 Free";
   color: @brand-success;
   content: "\f058";
   position: absolute;
   top: -6px;
   left: -6px;
-  font-size: 17px;
+  font-size: 15px;
+  font-weight: 900;
   }
 
   &:before {
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 Free";
     color: white;
     content: "\f111";
     position: absolute;
     top: -6px;
     left: -6px;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 900;
   }
 }
 
