Add disabled prop to both timepicker and datepicker

--- a/src/event_form/components/calendar/form-calendar-timepicker.component.html
+++ b/src/event_form/components/calendar/form-calendar-timepicker.component.html
@@ -1,5 +1,6 @@
 <uib-timepicker ng-model="timepicker.time" 
                 ng-change="timepicker.changed()" 
+                ng-disabled="timepicker.disabled"
                 hour-step="1" 
                 minute-step="15" 
                 show-spinners="false" 
