--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -109,6 +109,11 @@
       margin-top: 2.2em;
     }
   }
+
+  .status.alert {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .opening-hours .opening-hours-labels,
