--- a/src/event_form/components/calendar/form-calendar-period.component.html
+++ b/src/event_form/components/calendar/form-calendar-period.component.html
@@ -3,6 +3,7 @@
         <input type="checkbox"
                class="permanent-check"
                ng-model="$ctrl.calendarType"
+               ng-disabled="$ctrl.disabled"
                ng-true-value="'periodic'"
                ng-false-value="'permanent'"
                ng-change="$ctrl.formData.setCalendarType($ctrl.calendarType)">
@@ -11,7 +12,7 @@
     <div class="periodic-info">
         <div class="start-date">
             <label translate-once="calendar.period.from"></label>
-            <udb-form-calendar-datepicker ng-disabled="$ctrl.formData.calendar.calendarType !== 'periodic'"
+            <udb-form-calendar-datepicker ng-disabled="$ctrl.disabled || $ctrl.formData.calendar.calendarType !== 'periodic'"
                                             ng-model="$ctrl.formData.calendar.startDate"
                                             ng-change="$ctrl.formData.periodicTimingChanged()">
             </udb-form-calendar-datepicker>
@@ -19,7 +20,7 @@
 
         <div class="end-date">
             <label translate-once="calendar.period.till"></label>
-            <udb-form-calendar-datepicker ng-disabled="$ctrl.formData.calendar.calendarType !== 'periodic'"
+            <udb-form-calendar-datepicker ng-disabled="$ctrl.disabled || $ctrl.formData.calendar.calendarType !== 'periodic'"
                                             ng-model="$ctrl.formData.calendar.endDate"
                                             ng-change="$ctrl.formData.periodicTimingChanged()">
             </udb-form-calendar-datepicker>
