--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -22,12 +22,12 @@
                             <div class="dates">
                                 <div class="date form-group">
                                     <label for="time-span-{{$index}}-start-date" translate-once="calendar.start_label"></label>
-                                    <udb-form-calendar-datepicker ng-disabled="calendar.offerStatus.type !== 'Available'" ng-model="timeSpan.start" ng-change="calendar.delayedTimeSpanChanged('start')">
+                                    <udb-form-calendar-datepicker ng-disabled="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'" ng-model="timeSpan.start" ng-change="calendar.delayedTimeSpanChanged('start')">
                                     </udb-form-calendar-datepicker>
                                 </div>
                                 <div class="date form-group">
                                     <label for="time-span-{{$index}}-end-date" translate-once="calendar.end_label"></label>
-                                    <udb-form-calendar-datepicker ng-disabled="calendar.offerStatus.type !== 'Available'" ng-model="timeSpan.end" ng-change="calendar.delayedTimeSpanChanged('end')">
+                                    <udb-form-calendar-datepicker ng-disabled="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'" ng-model="timeSpan.end" ng-change="calendar.delayedTimeSpanChanged('end')">
                                     </udb-form-calendar-datepicker>
                                 </div>
                             </div>
@@ -36,7 +36,7 @@
                                     <label for="time-span-{{$index}}-has-timing-info">
                                         <input type="checkbox"
                                             id="time-span-{{$index}}-has-timing-info"
-                                            ng-disabled="calendar.offerStatus.type !== 'Available'"
+                                            ng-disabled="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'"
                                             ng-model="timeSpan.allDay"
                                             ng-change="calendar.toggleAllDay(timeSpan)"
                                             class="all-day-check"> <span translate-once="calendar.whole_day_label"></span>
@@ -46,12 +46,12 @@
                             <div class="timing" ng-if="!timeSpan.allDay">
                                 <div class="time form-group">
                                     <label translate-once="calendar.start_hour_label"></label>
-                                    <udb-form-calendar-timepicker ng-disabled="calendar.offerStatus.type !== 'Available'" ng-model="timeSpan.start" ng-change="calendar.delayedTimeSpanChanged('start')"></udb-form-calendar-timepicker>
+                                    <udb-form-calendar-timepicker ng-disabled="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'" ng-model="timeSpan.start" ng-change="calendar.delayedTimeSpanChanged('start')"></udb-form-calendar-timepicker>
                                 </div>
 
                                 <div class="time form-group">
                                     <label translate-once="calendar.end_hour_label"></label>
-                                    <udb-form-calendar-timepicker ng-disabled="calendar.offerStatus.type !== 'Available'" ng-model="timeSpan.end" ng-change="calendar.delayedTimeSpanChanged('end')"></udb-form-calendar-timepicker>
+                                    <udb-form-calendar-timepicker ng-disabled="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'" ng-model="timeSpan.end" ng-change="calendar.delayedTimeSpanChanged('end')"></udb-form-calendar-timepicker>
                                 </div>
                             </div>
                             <div class="requirements" ng-show="calendar.timeSpanRequirements[$index] && calendar.timeSpanRequirements[$index].length">
@@ -61,18 +61,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div ng-if="calendar.offerStatus.type !== 'Available'" class="status row alert alert-info">
-                            <div ng-if="calendar.isEvent" ng-switch="calendar.offerStatus.type">
-                                <span ng-switch-when="Available" translate-once="offerStatus.scheduled"></span>
+                        <div ng-if="calendar.subEvent && calendar.subEvent[$index].status.type !== 'Available'" class="status row alert alert-info">
+                            <div ng-switch="calendar.subEvent[$index].status.type">
                                 <span ng-switch-when="TemporarilyUnavailable" translate-once="offerStatus.postponed"></span>
                                 <span ng-switch-when="Unavailable" translate-once="offerStatus.cancelled"></span>
                             </div>
-                            <div ng-if="calendar.isPlace" ng-switch="calendar.offerStatus.type">
-                                <span ng-switch-when="Available" translate-once="offerStatus.open"></span>
-                                <span ng-switch-when="TemporarilyUnavailable" translate-once="offerStatus.temporarilyClosed"></span>
-                                <span ng-switch-when="Unavailable" translate-once="offerStatus.permanentlyClosed"></span>
-                            </div>                 
-                        </div>
+                        </div>                        
                     </div>
 
                     <a href="#" ng-click="calendar.createTimeSpan()" class="add-day-link" translate-once="calendar.add_days"></a>
@@ -80,11 +74,17 @@
             </div>
 
             <div class="calendar-recurrence" ng-if="calendar.weeklyRecurring">
-                <udb-form-calendar-period form-data="calendar.formData"></udb-form-calendar-period>
+                <udb-form-calendar-period ng-disabled="calendar.offerStatus.type !== 'Available'" form-data="calendar.formData"></udb-form-calendar-period>
                 <hr>
-                <udb-event-form-opening-hours form-data="calendar.formData" opening-hours="calendar.openingHoursCollection">
+                <udb-event-form-opening-hours ng-disabled="calendar.offerStatus.type !== 'Available'" form-data="calendar.formData" opening-hours="calendar.openingHoursCollection">
                 </udb-event-form-opening-hours>
-            </div>
+                <div ng-if="calendar.offerStatus.type !== 'Available'" class="status alert alert-info">
+                    <div ng-switch="calendar.offerStatus.type">
+                        <span ng-switch-when="TemporarilyUnavailable" translate-once="offerStatus.temporarilyClosed"></span>
+                        <span ng-switch-when="Unavailable" translate-once="offerStatus.permanentlyClosed"></span>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
 </div>
