--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -79,9 +79,7 @@
 }
 
 .calendar-time-span {
-  .make-row();
   position: relative;
-  padding-right: 30px;
 
   .date {
     .make-sm-column(6);
@@ -109,10 +107,10 @@
       margin-top: 2.2em;
     }
   }
-
+  
   .status.alert {
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 
